# LABS

./: CMakeLists.txt  README.md
.cache/clangd/index/: bicycle.cpp.FE4EA3E2E9D10125.idx  bicycle.h.D0F741CC4ACA4F74.idx  car.cpp.4AED053C766F2B4C.idx  car.h.AABBCFEF452168FC.idx  carriage.cpp.E8582E2A45E72AC0.idx  carriage.h.CC8079EA2E2D87AB.idx  consts.h.FF742B76B8313A88.idx  invalidException.cpp.15BE8EB1289F366E.idx  invalidException.h.7E243EB316601181.idx  main.cpp.2BB2F4BDEAE81EEA.idx  menu.cpp.0BB5D870DD6BF80D.idx  menu.h.517D8E6C2BAFAC47.idx  program.cpp.84BEA601A0EB4489.idx  program.h.06A4780252F40E7A.idx  transport.cpp.1CEB23D67628591A.idx  transport.h.729C37CA7214110E.idx  utils.cpp.091E6F59ADB009D6.idx  utils.h.FBE30DEEF76789B7.idx
1lab/: CMakeLists.txt  README.md
1lab/headers/: matrix.h  program.h  utilits.h
1lab/source/: main.cpp  matrix.cpp  menu.cpp  program.cpp  utilits.cpp
2lab/: CMakeLists.txt  README.md
2lab/headers/: array.h  menu.h  program.h
2lab/source/: array.cpp  main.cpp  menu.cpp  program.cpp
3lab/: CMakeLists.txt  README.md
3lab/include/: bicycle.h  car.h  carriage.h  consts.h  menu.h  program.h  transport.h  utils.h
3lab/src/: bicycle.cpp  car.cpp  carriage.cpp  main.cpp  menu.cpp  program.cpp  transport.cpp  utils.cpp
4lab/: CMakeLists.txt  README.md
4lab/include/: ancestor.h  grandson.h  kid.h  program.h  utils.h
4lab/src/: ancestor.cpp  grandson.cpp  kid.cpp  main.cpp  menu.cpp  program.cpp  utils.cpp
5lab/: CMakeLists.txt  README.md
5lab/include/: menu.h  program.h  utils.h
5lab/src/: main.cpp  menu.cpp  program.cpp
6lab/: CMakeLists.txt  README.md
6lab/include/: bicycle.h  car.h  carriage.h  consts.h  invalidException.h  menu.h  program.h  transport.h  utils.h
6lab/src/: bicycle.cpp  car.cpp  carriage.cpp  invalidException.cpp  main.cpp  menu.cpp  program.cpp  transport.cpp  utils.cpp
7lab/: CMakeLists.txt  README.md
7lab/include/: consts.h  date.h  menu.h  product.h  program.h  utils.h
7lab/src/: date.cpp  main.cpp  menu.cpp  product.cpp  program.cpp  utils.cpp
8lab/: CMakeLists.txt  README.md
8lab/include/: algorithm.h  exceptions.h  menu.h  node.h  program.h  ring.h  utils.h
8lab/src/: main.cpp  menu.cpp  typeSelector.cpp
